Seperate Setup instructions from usage instructions

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY="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"
+GROQ_API_KEY=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
 TAVILY_API_KEY="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"
