app.py to analyze using web scraping

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-GROQ_API_KEY=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
+GROQ_API_KEY="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"
 TAVILY_API_KEY="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"
+GITHUB_TOKEN="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"
