--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GROQ_API_KEY="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"
+GROQ_API_KEY_NEW="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"
 TAVILY_API_KEY="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"
 GITHUB_TOKEN="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"
 GITHUB_PERSONAL_ACCESS_TOKEN=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
