--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GROQ_API_KEY_NEW="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"
-TAVILY_API_KEY="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"
-GITHUB_TOKEN="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"
-GITHUB_PERSONAL_ACCESS_TOKEN=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
+GROQ_API_KEY_NEW=
+TAVILY_API_KEY=
+GITHUB_TOKEN=
+GITHUB_PERSONAL_ACCESS_TOKEN=
